--- a/style.css
+++ b/style.css
@@ -7,6 +7,45 @@
 body{
     font-family: 'Poppins', sans-serif;
     background-color: #F3F1FF;
+    margin: 0;
+}
+header{
+    background-color: #562EFF;
+    
+}
+.nav{
+    width: 870px;
+    margin: 0px auto;
+}
+.menu{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+.icon{
+    display: flex;
+    align-items: center;
+}
+.icon img{
+    height: 60%;
+    margin-right: 10px;
+}
+.title{
+    font-size: 24px;
+    font-weight: 300;
+    color: white;
+}
+.nav-manu{
+    display: flex;
+    align-items: center;
+}
+.nav-manu li{
+    margin-left: 10px;
+    margin-right: 10px;
+    list-style: none;
+    font-size: 14px;
+    font-weight: 300;
+    color: white;
 }
 main{
     display: flex;
@@ -92,7 +131,7 @@ hr{
 .course{
     padding: 8px;
     border-radius: 10px;
-    box-shadow: 5px 5px 5px rgb(218, 218, 218) ;
+    box-shadow: 5px 5px 5px 5px rgb(218, 218, 218) ;
 }
 .course-banner img{
     width: 224px;
@@ -125,4 +164,109 @@ hr{
     color: #FF4A60;
     font-size: 16px;
     font-weight: 500px;
+}
+
+/*---------------------
+     Media Queries 
+----------------------*/
+/* mobile device */
+
+@media only screen and (max-width: 688px) {
+    .nav{
+        width: 100%;
+        padding: 5px;
+    }
+    .icon img{
+        height: 30%;
+    }
+    .container{
+        width: 100%;
+        margin-left: 30px;
+    }
+    .section-title{
+        font-size: 18px;
+    }
+    .players , .blogs , .courses{
+        grid-template-columns: repeat(1 , 1fr);
+        row-gap: 10px;
+    }
+    .blogs , .courses{
+        width: 90%;
+    }
+    .blog-title{
+        font-size: 16px;
+    }
+    .blog-author{
+        font-size: 14px;
+    }
+    .blog-author a{
+        font-size: 14px;
+    }
+    .course-banner img{
+        width: 80%;
+    }
+    .course-title{
+        font-size: 16px;
+    }
+    .course-author{
+        font-size: 14px;
+    }
+}
+
+/* Tablet device */
+@media only screen and (min-width: 689px) and (max-width: 991px) {
+    .nav {
+            width: 100%;
+            margin-left: 5px;
+            
+        }
+        .icon img {
+            height: 40%;
+        }
+    
+        .container {
+            width: 100%;
+            margin-left: 30px;
+        }
+    
+        .section-title {
+            font-size: 18px;
+        }
+    
+        .players,
+        .blogs,
+        .courses {
+            grid-template-columns: repeat(2, 1fr);
+            row-gap: 10px;
+        }
+    
+        .blogs,
+        .courses {
+            width: 90%;
+        }
+    
+        .blog-title {
+            font-size: 18px;
+        }
+    
+        .blog-author {
+            font-size: 16px;
+        }
+    
+        .blog-author a {
+            font-size: 16px;
+        }
+    
+        .course-banner img {
+            width: 80%;
+        }
+    
+        .course-title {
+            font-size: 18px;
+        }
+    
+        .course-author {
+            font-size: 16px;
+        }
+    
 }
